<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/header_height"
    android:layout_marginBottom="@dimen/button_panel_bottom"
    android:background="?attr/backgroundContent"
>

    <FrameLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="?attr/backgroundContentLeft">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/choose_game"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/main_menu_item_margin_top"
            android:scrollbars="vertical"/>
        <Button
            android:id="@+id/button_game_never_have_i_ever"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/main_menu_item_margin_top"
            android:text="@string/gameNeverHaveIEver"></Button>
        <Button
            android:id="@+id/button_game_truth_or_dare"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/main_menu_item_margin_top"
            android:text="@string/gameTruthOrDare"></Button>
    </LinearLayout>
</LinearLayout>

