<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GameTruthOrDare">
    <include layout="@layout/header"/>
    <include layout="@layout/game_top_panel"/>
    <TextView
        android:id="@+id/gameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/game_text_view_margin_top"
        android:layout_marginBottom="@dimen/game_bottom_panel_height"
        android:background="?attr/backgroundContent"
        android:gravity="center"
        android:textSize="30dip"
        android:text="@string/startTruthOtDare"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/game_bottom_panel_height"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/truthBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/truth"
                android:textSize="30dip"
                android:textStyle="bold"
                android:textColor="@drawable/button_selector"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <include layout="@layout/split_bottom_panel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/dareBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dare"
                android:textSize="30dip"
                android:textStyle="bold"
                android:textColor="@drawable/button_selector"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>